# 2024albb

./: chessai.7z
Project16/: Project16.sln
Project16/Project16/: FileName.cpp  Project16.vcxproj
Project16/Project16/x64/Debug/: Project16.exe.recipe  Project16.ilk  vc143.idb
Project16/Project16/x64/Debug/Project16.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project16.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
classhw/: queue.cpp
classhw/project3/: CMakeLists.txt  stackhw.cpp  stackhw.h
ga/: CMakeLists.txt  ga.cpp  ga.h  main.cpp  maze.cpp  maze.h
level1/: CMakeLists.txt
level1/p01_running_letter/: runningletters.cpp
newprogram/: CMakeLists.txt  Node.h  main.cpp  skipList.h
