project(level1)

add_executable(p01_running_letter p01_running_letter/runningletters.cpp)

add_executable(p02_is_prime p02_is_prime/is_prime.cpp)

add_executable(p03_all_primes p03_all_primes/all_primes.cpp)

add_executable(p04_goldbach p04_goldbach/goldbach.cpp)

add_executable(p05_encrypt_decrypt p05_encrypt_decrypt/t5_justsoso.cpp)

add_executable(p06_hanoi p06_hanoi/hanor.cpp)

add_executable(p07_maze p07_maze/maze.cpp)

add_executable(p08_push_boxes p08_push_boxes/boxes.cpp)

add_executable(p09_linked_list p09_linked_list/list.cpp)

add_executable(p10_warehouse p10_warehouse/depository.cpp)